wasm/genomic_complement_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_v_p_bfvp/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/2b1888e8c52e257ea1ed4a4769b8b54247abac33.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/2b1888e8c52e257ea1ed4a4769b8b54247abac33.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/af03dcf60f2338c2cbbe79bb841e24b1387fae53.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/af03dcf60f2338c2cbbe79bb841e24b1387fae53.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/fa5cae57eed6d0e8ce214a7a02e074a025064a6f.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/fa5cae57eed6d0e8ce214a7a02e074a025064a6f.json" for subsequent builds)
cache:INFO:  - ok
